<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#39302D"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/Operaciones"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:background="#502D2D"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Dato1"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Dato1"
            android:textSize="24sp"
            tools:text="@string/Dato2" />

        <EditText
            android:id="@+id/edtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number|textPersonName" />

        <Button
            android:id="@+id/btnsumar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sumar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnrestar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Restar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmultiplicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiplicacion"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btndivision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmcm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcm"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmcd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcd"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnmayor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mayor"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/idlogo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#39302D"
            android:visibility="visible"
            app:srcCompat="@drawable/firma"
            tools:visibility="visible" />
    </LinearLayout>
</LinearLayout>